[gd_scene load_steps=4 format=3 uid="uid://byitrpxo1cftx"]

[ext_resource type="Script" path="res://scripts/start.gd" id="1_gaapw"]
[ext_resource type="Texture2D" uid="uid://d25w0mjqtlb0r" path="res://Tilepngs/bellTower.jpg" id="2_s1ivv"]
[ext_resource type="FontFile" uid="uid://c07wbcgwc3ugb" path="res://Fonts/fonts/architect-s-daughter/ArchitectsDaughter.ttf" id="3_ed01v"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_gaapw")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1125.0
offset_bottom = 717.0
texture = ExtResource("2_s1ivv")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 296.0
offset_top = 227.0
offset_right = 859.0
offset_bottom = 395.0
theme_override_fonts/normal_font = ExtResource("3_ed01v")
theme_override_font_sizes/normal_font_size = 50
text = "WHERES WALLY?"

[node name="Button" type="Button" parent="."]
offset_left = 475.0
offset_top = 414.0
offset_right = 590.0
offset_bottom = 475.0
theme_override_fonts/font = ExtResource("3_ed01v")
text = "Start!"

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 394.0
offset_top = 410.0
offset_right = 655.0
offset_bottom = 478.0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 112.0
offset_top = 361.0
offset_right = 1744.0
offset_bottom = 529.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/normal_font = ExtResource("3_ed01v")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Enter a Username:"

[node name="SubmitButton" type="Button" parent="."]
offset_left = 449.0
offset_top = 485.0
offset_right = 616.0
offset_bottom = 546.0
theme_override_fonts/font = ExtResource("3_ed01v")
text = "Submit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
